--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "wechat applet API ES6 wrapper",
   "main": "dist/index.js",
   "scripts": {
-    "test": "jest ./",
-    "build": "webpack --progress --colors --config webpack.config.js"
+    "pretest": "eslint es6",
+    "test": "jest",
+    "build": "rimraf dist/* && webpack --progress --colors --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -14,8 +15,9 @@
   "keywords": [
     "wechat",
     "wexin",
-    "applet",
-    "wx"
+    "applet小程序",
+    "wx",
+    "微信小程序"
   ],
   "author": "xixilive@gmail.com",
   "license": "MIT",
@@ -27,14 +29,31 @@
     "babel-cli": "^6.18.0",
     "babel-core": "^6.21.0",
     "babel-eslint": "^7.1.1",
+    "babel-jest": "^18.0.0",
     "babel-loader": "^6.2.10",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
     "core-js": "^2.4.1",
     "eslint": "^3.12.2",
-    "lodash": "^4.17.3",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0",
+    "jest-cli": "^18.0.0",
+    "rimraf": "^2.5.4",
     "webpack": "^1.14.0"
+  },
+  "jest": {
+    "automock": false,
+    "bail": true,
+    "transform": {
+      ".js": "<rootDir>/node_modules/babel-jest"
+    },
+    "testPathDirs": [
+      "<rootDir>/__tests__/"
+    ],
+    "unmockedModulePathPatterns": [
+      "/node_modules/"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
