--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "weapp",
-  "version": "0.1.3",
-  "description": "wechat applet API ES6 wrapper",
+  "version": "0.1.4",
+  "description": "Wechat applet official API wrapper, purpose to expose fashionable, friendly and fluent programming API.",
   "main": "dist/index.js",
   "scripts": {
     "pretest": "eslint es6",
@@ -15,8 +15,6 @@
   "keywords": [
     "wechat",
     "wexin",
-    "applet小程序",
-    "wx",
     "微信小程序",
     "weapp"
   ],
