--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "weapp-next",
-  "version": "0.2.1",
+  "version": "0.3.0",
+  "apiVersion": "1.1.0",
   "description": "Weapp(微信小程序) official API wrapper, purpose to expose fashionable, friendly and fluent programming API.",
   "main": "dist/index.js",
   "scripts": {
