improved: sanitize callback values for wx.login and wx.getUserInfo methods

--- a/.eslintrc
+++ b/.eslintrc
@@ -32,6 +32,7 @@
     "no-unused-expressions": 0,
     "no-unused-vars": [2,  {"args": "none"}],
     "curly": 0,
+    "semi": 0,
     "max-nested-callbacks": [2, 4],
     "no-multiple-empty-lines": 2
   }
